--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,23 @@ header{
     width: 100%;
     height: 50px;
     background-color: rgb(255, 102, 0);
+    position: fixed;
+}
+
+main{
+    padding-top: 80px;
 }
 
 .container{
     display: flex;
     justify-content: center;
+}
+
+.container-main{
+    max-width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 img.logo{
@@ -43,6 +55,22 @@ a{
     text-decoration: none;
 }
 
+.col-33{
+    width: 33%;
+}
+
+.h-300{
+    height: 300px;
+}
+
+.bg-silver{
+    background-color: silver;
+}
+
+.justify-content-between{
+    justify-content: space-between;
+}
+
 .square{
     width: 25%;
     height: 40px;
@@ -55,4 +83,24 @@ a{
 
 .shop{
     text-align: right;
+}
+
+.bg-red{
+    background-color: red;
+}
+
+.border-black{
+    border: 1px solid black;
+}
+
+.h-800{
+    height: 1150px;
+}
+
+.card{
+    width: 100%;    
+}
+
+.card img{
+    max-width: 100%;
 }
